



########### install files ###############

install( FILES Dark_Wood.png Granite.png Light_Wood.png Ocean.png Puzzle.png  Earth.png Hexagon.png  Mystique.png Pipes.png Stones.png  DESTINATION  ${DATA_INSTALL_DIR}/kreversi/pics/background )




#original Makefile.am contents follow:

#
#bg_DATA = Dark_Wood.png Granite.png Light_Wood.png Ocean.png Puzzle.png \
#Earth.png Hexagon.png  Mystique.png Pipes.png Stones.png
#
#bgdir = $(kde_datadir)/kreversi/pics/background
#
#EXTRA_DIST = $(bg_DATA)
#
